# midi-player

./: Cargo.toml  README.md
examples/: Sibelius_The_Spruce.mid  simple.rs
src/: lib.rs  player.rs
