[package]
name = "midi-player"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "1.1.0"
bon = "2.3.0"
iced = { version = "0.13.1", features = ["wgpu"], optional = true }
nodi = "1.0.1"
ringbuf = "0.4.7"
rustysynth = "1.3.2"

[dev-dependencies]
cpal = "0.15.3"
indicatif = "0.17.8"

[[example]]
name = "gui"
required-features = ["with-gui"]

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"

[features]
with-gui = ["dep:iced"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
