[package]
name = "midi-player"
version = "0.1.0"
edition = "2021"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
description = "A MIDI file player library with integrated synthesizer"
readme = "README.md"
repository = "https://github.com/ales-tsurko/midi-player"
license-file = "LICENSE"
exclude = [
    "examples/Nice-Steinway-Lite-v3.0.sf2",
    "examples/Sibelius_The_Spruce.mid",
]

[dependencies]
atomic_float = "1.1.0"
bon = "2.3.0"
nodi = "1.0.1"
ringbuf = "0.4.7"
rustysynth = "1.3.2"

[dev-dependencies]
cpal = "0.15.3"
indicatif = "0.17.8"

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
